--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1154,15 +1154,6 @@ Enable minibuffer commands (e.g. [[*counsel - ivy powered commands][counsel]]) i
     :after ivy)
 #+END_SRC
 
-*** wgrep - Edit files through grep output
-[[https://github.com/mhayashi1120/Emacs-wgrep][wgrep (GitHub)]]
-
-#+BEGIN_SRC emacs-lisp
-  (use-package wgrep
-    :ensure t
-    :after ivy)
-#+END_SRC
-
 ** helpful - Help viewer
 [[https://github.com/Wilfred/helpful][helpful (GitHub)]]
 
@@ -1266,6 +1257,15 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
       (ansi-color-apply-on-region compilation-filter-start (point)))
     :config
     (add-hook 'compilation-filter-hook #'koek-cmpl/style-output))
+#+END_SRC
+
+** wgrep - Edit files through grep output
+[[https://github.com/mhayashi1120/Emacs-wgrep][wgrep (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package wgrep
+    :ensure t
+    :defer t)
 #+END_SRC
 
 ** calendar - Calendar
