[emacs] Bind pp-*-last-sexp in Emacs Lisp modes.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1391,6 +1391,14 @@ Run =M-x= ~cider-jack-in~. Then, from the REPL, run ~(start)~.
   (use-package elisp-mode
     :mode ((rx ".el" string-end) . emacs-lisp-mode)
     :config
+    (use-package pp
+      :bind
+      (:map emacs-lisp-mode-map
+       ("C-c x p" . pp-eval-last-sexp)
+       ("C-c x m" . pp-macroexpand-last-sexp)
+       :map lisp-interaction-mode-map
+       ("C-c x p" . pp-eval-last-sexp)
+       ("C-c x m" . pp-macroexpand-last-sexp)))
     (use-package helpful
       :bind
       (:map emacs-lisp-mode-map
