--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1330,6 +1330,151 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
                 nil t)
           (push (cons (match-string 1) (match-string 2)) properties)))
       (koek-ino/make-nested-alist properties)))
+
+  (defun koek-ino/read-hardware-specs (file-names)
+    "Read hardware specifications from FILE-NAMES.
+  FILE-NAMES is a list of file names to hardware specification
+  install directories."
+    (thread-last file-names
+      (seq-mapcat
+       (lambda (file-name)
+         (file-expand-wildcards (expand-file-name "*/*/platform.txt" file-name)
+                                'full)))
+      (mapcar #'file-name-directory)
+      (mapcar
+       (lambda (file-name)
+         `((:home        . ,file-name)
+           (:boards      . ,(koek-ino/read-properties
+                             (expand-file-name "boards.txt" file-name)))
+           (:platform    . ,(koek-ino/read-properties
+                             (expand-file-name "platform.txt" file-name)))
+           (:programmers . ,(koek-ino/read-properties
+                             (expand-file-name "programmers.txt" file-name))))))))
+
+  (defun koek-ino/insert-section-headline (name)
+    "Insert section headline into current.
+  NAME is a string."
+    (unless (= (point) 1)
+      (insert "\n"))
+    (insert "[" name "]\n"))
+
+  (defun koek-ino/normalize-property-value (value)
+    "Normalize property value VALUE.
+  VALUE is a symbol, number, string or list.  Value is converted to
+  a string."
+    (cond
+     ((listp value)
+      (concat "[" (mapconcat #'koek-ino/normalize-property-value value ", ") "]"))
+     ((stringp value)
+      (format "'%s'" value))
+     (t
+      (format "%s" value))))
+
+  (defun koek-ino/insert-property (key value)
+    "Insert property into current.
+  KEY is a string.  VALUE is a symbol, number, string or list."
+    (insert key " = " (koek-ino/normalize-property-value value) "\n"))
+
+  (eval-and-compile
+    (defun koek-ino/propertyp (element)
+      "Return whether ELEMENT is a property."
+      (not (keywordp element)))
+
+    (defun koek-ino/normalize-sections-spec (spec &optional sections)
+      "Normalize sections specification SPEC.
+  SPEC is a list of section names and properties.  Specification is
+  converted to a nested alist.  Keys are converted to strings.
+  SECTIONS is used internally."
+      (if spec
+          (let ((section
+                 (cons
+                  (replace-regexp-in-string (rx line-start ":") ""
+                                            (symbol-name (car spec)))
+                  (mapcar (pcase-lambda (`(,key ,value))
+                            (cons (symbol-name key) value))
+                          (seq-partition
+                           (seq-take-while #'koek-ino/propertyp (cdr spec)) 2)))))
+            (koek-ino/normalize-sections-spec
+             (seq-drop-while #'koek-ino/propertyp (cdr spec))
+             (cons section sections)))
+        (reverse sections))))
+
+  (defmacro koek-ino/write-cross-file (file-name &rest spec)
+    (declare (indent 1))
+    `(with-temp-file ,file-name
+       ,@(seq-mapcat (pcase-lambda (`(,name . ,properties))
+                       (cons `(koek-ino/insert-section-headline ,name)
+                             (mapcar (pcase-lambda (`(,key . ,value))
+                                       `(koek-ino/insert-property ,key ,value))
+                                     properties)))
+                     (koek-ino/normalize-sections-spec spec))))
+
+  (defconst koek-ino/hardware-install-dirs '("/usr/share/arduino/hardware/")
+    "List of file names to hardware specification install directories.")
+
+  (defconst koek-ino/hardware-whitelist-preds
+    (list (lambda (spec)
+            (let ((name (koek-ino/get-in '(:platform :name) spec))
+                  (version (koek-ino/get-in '(:platform :version) spec)))
+              (and (string= name "Arch Linux Arduino AVR Boards")
+                   (member version '("1.6.20"))
+                   t))))
+    "List of hardware specification whitelist predicates.
+  Predicates are passed a hardware specification.  When a predicate
+  returns t, the hardware specification is whitelisted.")
+
+  (defun koek-ino/generate-project (file-name board-spec)
+    "Generate Arduino project.
+  FILE-NAME is a string, the file name to the project home
+  directory.  BOARD-SPEC is an alist, the board specification.  It
+  has two keys, :hardware and :board.  :hardware points to a
+  hardware specification.  :board points to a board in :hardware."
+    (interactive
+     (list
+      (thread-last (read-directory-name "Project home: ")
+        expand-file-name
+        file-name-as-directory)
+      (let* ((hardware-specs
+              (seq-filter
+               (lambda (spec)
+                 (seq-some (lambda (pred)
+                             (funcall pred spec))
+                           koek-ino/hardware-whitelist-preds))
+               (koek-ino/read-hardware-specs koek-ino/hardware-install-dirs)))
+             (candidates
+              (seq-mapcat
+               (lambda (hardware-spec)
+                 (let ((platform-name
+                        (format
+                         "%s %s"
+                         (koek-ino/get-in '(:platform :name) hardware-spec)
+                         (koek-ino/get-in '(:platform :version) hardware-spec))))
+                   (thread-last (koek-ino/get-in '(:boards) hardware-spec)
+                     (mapcar #'cdr)
+                     (seq-filter (apply-partially #'koek-ino/get-in '(:name)))
+                     (mapcar (lambda (board-spec)
+                               (cons (format "%s (%s)"
+                                             (koek-ino/get-in '(:name) board-spec)
+                                             platform-name)
+                                     `((:board    . ,board-spec)
+                                       (:hardware . ,hardware-spec))))))))
+               hardware-specs)))
+        (cdr (assoc (completing-read "Board: " candidates t) candidates)))))
+    (make-directory file-name 'make-parents)
+    (koek-ino/write-cross-file (expand-file-name "cross.txt" file-name)
+      :binaries
+      c (executable-find "avr-gcc")
+      cpp (executable-find "avr-g++")
+      :properties
+      ino_src (directory-files
+               (thread-last (koek-ino/get-in '(:hardware :home) board-spec)
+                 (expand-file-name "cores/")
+                 (expand-file-name
+                  (koek-ino/get-in '(:board :build :core) board-spec))
+                 file-name-as-directory)
+               'full (rx (or ".c" ".cpp") line-end))
+      :host_machine
+      system "bare"))
 #+END_SRC
 
 ** C family
