--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -771,7 +771,7 @@ whitespace mode.
   (use-package company-dabbrev
     :defer t
     :config
-    (setq company-dabbrev-other-buffers nil))
+    (setq company-dabbrev-other-buffers t))
 #+END_SRC
 
 *** company-flx - Match candidates fuzzily
