[emacs] Load smart eshell module.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1242,6 +1242,11 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
     :bind
     ("C-c x e" . eshell))
 
+  (use-package esh-module
+    :defer t
+    :config
+    (add-to-list 'eshell-modules-list 'eshell-smart))
+
   (use-package em-unix
     :defer t
     :config
